src/objects/Customer_Segmentation__c.object
<CustomObject>
    <description>R5 - Custom Object to define Customer Segmentation</description>
    <fields>
        <fullName>ABB_Industry_Usage_Level1__c</fullName>
        <description>R5-Picklist for Customer segmentation</description>
        <label>Industry Usage Level1</label>
        <picklist>
            <picklistValues>
                <fullName>BLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Level2__c</fullName>
        <description>R5-Picklist for Customer segmentation. Dependent field of ABB Industry Usage Level1</description>
        <label>Industry Usage Level2</label>
        <picklist>
            <controllingField>ABB_Industry_Usage_Level1__c</controllingField>
            <picklistValues>
                <fullName>BLD.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT.2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Level3__c</fullName>
        <description>R5-Picklist for Customer segmentation. Dependent field of Abb Industry Usage Level3</description>
        <label>Industry Usage Level3</label>
        <picklist>
            <controllingField>ABB_Industry_Usage_Level2__c</controllingField>
            <picklistValues>
                <fullName>BLD.9.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.10.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.5.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.8.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.3.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Segmentation_Process__c</fullName>
        <formula>HYPERLINK(&quot;https://abb.sharepoint.com/sites/FACETrainingandChangeManagement/_layouts/15/WopiFrame.aspx?sourcedoc={2A2AE353-D7FB-4D8B-A41D-59E4DCD84396}&amp;file=Strategic%20Sales%20-%20Customer%20Segmentation%20-%20Help%20Final%20-%20March%202016.pptx&amp;action=default&quot;, &quot;Are you aware of the Account Segmentation process?&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Segmentation Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup to Account Standard Object</description>
        <inlineHelpText>Account means Customer</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Customer_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Line__c</fullName>
        <description>R5- Picklist for Application line-dependent field</description>
        <label>Application Line</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>AP.301</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.302</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.303</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.304</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.305</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.306</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.307</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.308</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.309</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.311</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.313</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.314</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.315</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.316</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.317</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.318</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.319</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.321</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.322</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.323</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.324</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.325</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.326</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.327</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.328</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.329</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.331</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Line_BU__c</fullName>
        <description>R5-Picklist for Business line Bu.</description>
        <label>BU</label>
        <picklist>
            <controllingField>DIV__c</controllingField>
            <picklistValues>
                <fullName>DMDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPCW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAOG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PATU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGHV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGTR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZCCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZCRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZCVA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <description>R5 - Business Line</description>
        <label>Business Line</label>
        <picklist>
            <controllingField>Business_Line_BU__c</controllingField>
            <picklistValues>
                <fullName>BL.101 - Extended Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.103 - Essential Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.107 - Decathlon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.108 - Safety System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.109 - Heritage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.110 - EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.111 - Turnkey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.112 - Equipment Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.113 - Supply of Site Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.114 - System Delivery / Engineered Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.201 - Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.202 - Electrification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.203 - Automation and Electrification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.204 - Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.301 - Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.302 - Welding and Cutting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.303 - PAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.304 - Base Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.305 - New Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.306 - Lot Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.307 - Internal Robot Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.315 - Body-in-White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.316 - Paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.317 - Powertrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.318 - Small Part Assembly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.319 - Service Robotics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.320 - Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.401 - Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.402 - Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.501 - Packaging</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Partner_Segment_Level1__c</fullName>
        <description>R5 - Business Partner Segment Level1 for Customer Segmentation</description>
        <label>Business Partner Segment Level1</label>
        <picklist>
            <picklistValues>
                <fullName>A05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A83</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A85</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B45</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Partner_Segment_Level2__c</fullName>
        <description>R5 - Business Partner Segment Level2 for Customer Segmentation</description>
        <label>Business Partner Segment Level2</label>
        <picklist>
            <controllingField>Business_Partner_Segment_Level1__c</controllingField>
            <picklistValues>
                <fullName>00.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27.1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Segmentation_1__c</fullName>
        <description>R5 - Business Segmentation 1</description>
        <inlineHelpText>Local sales segmentation requirements</inlineHelpText>
        <label>Segmentation 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Segmentation_2__c</fullName>
        <description>R5 - Business Segmentation 2</description>
        <inlineHelpText>Local sales segmentation requirements</inlineHelpText>
        <label>Segmentation 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Segmentation_3__c</fullName>
        <description>R5 - Business Segmentation 3</description>
        <inlineHelpText>Local sales segmentation requirements</inlineHelpText>
        <label>Segmentation 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>R5 Business Unit</description>
        <label>Application BU</label>
        <picklist>
            <controllingField>DIV__c</controllingField>
            <picklistValues>
                <fullName>DMDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PATU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Other BU&apos;s</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level1__c</fullName>
        <description>R5-picklist field for Customer segmentation</description>
        <label>Channel Class Level1</label>
        <picklist>
            <picklistValues>
                <fullName>ABBINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYIN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level2__c</fullName>
        <description>R5-picklist for Customer segmentation</description>
        <label>Channel Class Level2</label>
        <picklist>
            <controllingField>Channel_Class_Level1__c</controllingField>
            <picklistValues>
                <fullName>BTDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PABL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINLB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINMB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>R5 - Comments</description>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>R5 Country</description>
        <formula>Text(Account__r.Primary_Address_Country__c)</formula>
        <label>Primary Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Sales_Segmentation_Year_1__c</fullName>
        <description>R5 - Customer Sales Segmentation Year +1</description>
        <inlineHelpText>A-Top Accounts(roughly5% of active ones)with high potential
B-Medium/Large Accounts(roughly10%)with important potential
C-Standard Accounts(roughly70%)handled directly by Account Manager
D-Smaller Accounts(roughly10%)mainly addressed to ChannelPartners</inlineHelpText>
        <label>Account Sales Segmentation Year +1</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Sales_Segmentation_Year_2__c</fullName>
        <description>R5 - Customer Sales Segmentation Year +2</description>
        <inlineHelpText>A-Top Accounts(roughly5% of active ones)with high potential
B-Medium/Large Accounts(roughly10%)with important potential
C-Standard Accounts(roughly70%)handled directly by Account Manager
D-Smaller Accounts(roughly10%)mainly addressed to ChannelPartners</inlineHelpText>
        <label>Account Sales Segmentation Year +2</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Sales_Segmentation_Year_3__c</fullName>
        <description>R5- Customer Sales Segmentation Year +3</description>
        <inlineHelpText>A-Top Accounts(roughly5% of active ones)with high potential
B-Medium/Large Accounts(roughly10%)with important potential
C-Standard Accounts(roughly70%)handled directly by Account Manager
D-Smaller Accounts(roughly10%)mainly addressed to ChannelPartners</inlineHelpText>
        <label>Account Sales Segmentation Year +3</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>